Config Angular router (without hash)

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -23,4 +23,6 @@
   </li>
 </ul>
 
-<app-register></app-register>
+<a routerLink="/register">{{ "index.register" | translate }}</a>
+
+<router-outlet></router-outlet>
