--- a/angular/src/app/components/register/register.component.html
+++ b/angular/src/app/components/register/register.component.html
@@ -15,3 +15,4 @@
     <app-control-messages [control]="userForm.controls.password" [field]="'password'"></app-control-messages>
   </div>
 </form>
+<a routerLink="/">{{ "index.home" | translate }}</a>
